--- a/.github/workflows/seleniumjava.yml
+++ b/.github/workflows/seleniumjava.yml
@@ -9,6 +9,11 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+    
+    - name: Setting for edge
+      uses: browser-actions/setup-edge@v1
+
+
 
     - name: Set up JDK 21
       uses: actions/setup-java@v4
